--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,33 @@
-name: Upload to S3
+name: Sync files from S3 to GitHub
 
 on:
-  push:
-    branches:
-      - main  # or your default branch
+  workflow_dispatch:  # Manual trigger
 
 jobs:
-  deploy:
+  pull-from-s3:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Sync files to S3
-        uses: jakejarvis/s3-sync-action@master
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          args: --acl public-read --delete
-        env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: 'dist' # or wherever your build output is
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Download files from S3
+        run: |
+          mkdir -p s3-files
+          aws s3 sync s3://${{ secrets.S3_BUCKET_NAME }}/${{ secrets.S3_SOURCE_PATH }} ./s3-files/
+
+      - name: Commit and push changes
+        run: |
+          cp -r s3-files/* .
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add .
+          git commit -m "Sync from S3" || echo "No changes to commit"
+          git push
